Fixing Java 8 parse issue (#401)